Closed
Bug 676361
Opened 14 years ago
Closed 14 years ago
Plugin hangs when content's script accesses plugin at mouse wheel event which wasn't consumed by the plugin
Categories
(Core Graveyard :: Plug-ins, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
mozilla8
People
(Reporter: b1437400, Assigned: masayuki)
References
Details
(Keywords: regression)
Crash Data
Attachments
(2 files, 1 obsolete file)
|
2.42 KB,
patch
|
jimm
:
review+
|
Details | Diff | Splinter Review |
|
4.29 KB,
patch
|
jimm
:
review-
|
Details | Diff | Splinter Review |
http://perfectumlab.com/galery/panorams/unusual/refrigerator/refrigerator.html
Try to scroll up/down on this link.
| Reporter | ||
Comment 1•14 years ago
|
||
Seems to work fine on 5.0
Comment 2•14 years ago
|
||
Regrssion window(m-c hourly)
Works:
http://hg.mozilla.org/mozilla-central/rev/a43c3080f472
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:8.0a1) Gecko/20110802 Firefox/8.0a1 ID:20110802030845
Fails:
http://hg.mozilla.org/mozilla-central/rev/
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:8.0a1) Gecko/20110801 Firefox/8.0a1 ID:20110801200714
Pushlog:
http://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=a43c3080f472&tochange=cb495bdd4aea
Triggered by
cb495bdd4aea Masayuki Nakano — Bug 658194 Get rid of SendMessage() from mouse wheel event handling r=jimm
Status: UNCONFIRMED → NEW
Component: General → Plug-ins
Ever confirmed: true
Product: Firefox → Core
QA Contact: general → plugins
Updated•14 years ago
|
Blocks: 658194
Keywords: regression
Comment 3•14 years ago
|
||
Does anyone have a crash report?
Updated•14 years ago
|
OS: All → Windows 7
Comment 4•14 years ago
|
||
No crash reports.
Firefox hang, no UI response.
I need to kill plugin-container.exe from TaskManager.
Comment 5•14 years ago
|
||
https://crash-stats.mozilla.com/report/index/bb51011c-deca-4ccd-a7bf-d8acc2110803
and
https://crash-stats.mozilla.com/report/index/97aec0c1-cea9-40be-aa9d-8544a2110803
Child appears to be in SendMessageW/SetWindowTextW.
Comment 6•14 years ago
|
||
OK, I got same Crash Sig after waiting about 40sec from the hang.
Comment 7•14 years ago
|
||
Flash movie in http://www.nicovideo.jp (log-in needs) crashes also.
Updated•14 years ago
|
Attachment #550515 -
Attachment is obsolete: true
| Assignee | ||
Comment 8•14 years ago
|
||
> ntdll.dll!_NtWaitForMultipleObjects@20() + 0x15 bytes
> ntdll.dll!_NtWaitForMultipleObjects@20() + 0x15 bytes
> user32.dll!_CallHookWithSEH@16() + 0x33 bytes
> kernel32.dll!75631a2c()
> [Frames below may be incorrect and/or missing, no symbols loaded for kernel32.dll]
> user32.dll!_RealMsgWaitForMultipleObjectsEx@20() + 0xe2 bytes
> user32.dll!_MsgWaitForMultipleObjects@20() + 0x1f bytes
> xul.dll!mozilla::ipc::RPCChannel::WaitForNotify() Line 926 + 0x1a bytes C++
> xul.dll!mozilla::ipc::RPCChannel::Call(IPC::Message * msg=0x1df9ce88, IPC::Message * reply=0x00509284) Line 201 + 0xb bytes C++
> xul.dll!mozilla::plugins::PPluginInstanceParent::CallNPP_GetValue_NPPVpluginScriptableNPObject(mozilla::plugins::PPluginScriptableObjectParent * * value=0x00509308, short * result=0x00509304) Line 366 + 0x16 bytes C++
> xul.dll!mozilla::plugins::PluginInstanceParent::NPP_GetValue(NPPVariable aVariable=NPPVpluginScriptableNPObject, void * _retval=0x005093b0) Line 984 + 0x10 bytes C++
> xul.dll!mozilla::plugins::PluginModuleParent::NPP_GetValue(_NPP * instance=0x1e0b040c, NPPVariable variable=NPPVpluginScriptableNPObject, void * ret_value=0x005093b0) Line 569 C++
> xul.dll!nsNPAPIPluginInstance::GetValueFromPlugin(NPPVariable variable=NPPVpluginScriptableNPObject, void * value=0x005093b0) Line 603 + 0x29 bytes C++
> xul.dll!nsNPAPIPluginInstance::GetJSObject(JSContext * cx=0x097deb58, JSObject * * outObject=0x0050947c) Line 738 + 0xe bytes C++
> xul.dll!nsHTMLPluginObjElementSH::GetPluginJSObject(JSContext * cx=0x097deb58, JSObject * obj=0x191f32e0, nsNPAPIPluginInstance * plugin_inst=0x1e0b0400, JSObject * * plugin_obj=0x0050947c, JSObject * * plugin_proto=0x00509450) Line 10155 C++
> xul.dll!nsHTMLPluginObjElementSH::SetupProtoChain(nsIXPConnectWrappedNative * wrapper=0x1e141b08, JSContext * cx=0x097deb58, JSObject * obj=0x191f32e0) Line 9900 + 0x1e bytes C++
> xul.dll!nsHTMLPluginObjElementSH::PostCreate(nsIXPConnectWrappedNative * wrapper=0x1e141b08, JSContext * cx=0x097deb58, JSObject * obj=0x191f32e0) Line 9999 + 0x11 bytes C++
> xul.dll!FinishCreate(XPCCallContext & ccx={...}, XPCWrappedNativeScope * Scope=0x1dfdea78, XPCNativeInterface * Interface=0x00000000, nsWrapperCache * cache=0x125bce9c, XPCWrappedNative * wrapper=0x1e141b08, XPCWrappedNative * * resultWrapper=0x00509774) Line 679 + 0x2a bytes C++
> xul.dll!XPCWrappedNative::GetNewOrUsed(XPCCallContext & ccx={...}, xpcObjectHelper & helper={...}, XPCWrappedNativeScope * Scope=0x1dfdea78, XPCNativeInterface * Interface=0x00000000, int isGlobal=0, XPCWrappedNative * * resultWrapper=0x00509774) Line 610 + 0x22 bytes C++
> xul.dll!XPCConvert::NativeInterface2JSObject(XPCLazyCallContext & lccx={...}, jsval_layout * d=0x0050a464, nsIXPConnectJSObjectHolder * * dest=0x00000000, xpcObjectHelper & aHelper={...}, const nsID * iid=0x00000000, XPCNativeInterface * * Interface=0x00000000, int allowNativeWrapper=1, int isGlobal=0, unsigned int * pErr=0x005097e4) Line 1291 + 0x39 bytes C++
> xul.dll!NativeInterface2JSObject(XPCLazyCallContext & lccx={...}, JSObject * aScope=0x191a62e0, nsISupports * aCOMObj=0x125bce98, nsWrapperCache * aCache=0x125bce9c, const nsID * aIID=0x00000000, int aAllowWrapping=1, jsval_layout * aVal=0x0050a464, nsIXPConnectJSObjectHolder * * aHolder=0x00000000) Line 1285 + 0x25 bytes C++
> xul.dll!nsXPConnect::WrapNativeToJSVal(JSContext * aJSContext=0x097deb58, JSObject * aScope=0x191a62e0, nsISupports * aCOMObj=0x125bce98, nsWrapperCache * aCache=0x125bce9c, const nsID * aIID=0x00000000, int aAllowWrapping=1, jsval_layout * aVal=0x0050a464, nsIXPConnectJSObjectHolder * * aHolder=0x00000000) Line 1341 + 0x28 bytes C++
> xul.dll!WrapNative(JSContext * cx=0x097deb58, JSObject * scope=0x191a62e0, nsISupports * native=0x125bce98, nsWrapperCache * cache=0x125bce9c, const nsID * aIID=0x00000000, jsval_layout * vp=0x0050a464, nsIXPConnectJSObjectHolder * * aHolder=0x00000000, int aAllowWrapping=1) Line 1820 C++
> xul.dll!WrapNative(JSContext * cx=0x097deb58, JSObject * scope=0x191a62e0, nsISupports * native=0x125bce98, nsWrapperCache * cache=0x125bce9c, int aAllowWrapping=1, jsval_layout * vp=0x0050a464, nsIXPConnectJSObjectHolder * * aHolder=0x00000000) Line 1853 + 0x23 bytes C++
> xul.dll!nsHTMLDocumentSH::GetProperty(nsIXPConnectWrappedNative * wrapper=0x1dfde2c0, JSContext * cx=0x097deb58, JSObject * obj=0x191a62e0, jsid id={...}, jsval_layout * vp=0x0050a464, int * _retval=0x005099dc) Line 9482 + 0x22 bytes C++
> xul.dll!XPC_WN_Helper_GetProperty(JSContext * cx=0x097deb58, JSObject * obj=0x191a62e0, jsid id={...}, jsval_layout * vp=0x0050a464) Line 995 + 0x26 bytes C++
> mozjs.dll!js::CallJSPropertyOp(JSContext * cx=0x097deb58, int (JSContext *, JSObject *, jsid, js::Value *)* op=0x55538590, JSObject * receiver=0x191a62e0, jsid id={...}, js::Value * vp=0x0050a464) Line 333 + 0x13 bytes C++
> mozjs.dll!js::Shape::get(JSContext * cx=0x097deb58, JSObject * receiver=0x191a62e0, JSObject * obj=0x191a62e0, JSObject * pobj=0x191a62e0, js::Value * vp=0x0050a464) Line 284 + 0x51 bytes C++
> mozjs.dll!js_NativeGetInline(JSContext * cx=0x097deb58, JSObject * receiver=0x191a62e0, JSObject * obj=0x191a62e0, JSObject * pobj=0x191a62e0, const js::Shape * shape=0x191e3a60, unsigned int getHow=0, js::Value * vp=0x0050a464) Line 5108 + 0x1c bytes C++
> mozjs.dll!js_GetPropertyHelperInline(JSContext * cx=0x097deb58, JSObject * obj=0x191a62e0, JSObject * receiver=0x191a62e0, jsid id={...}, unsigned int getHow=0, js::Value * vp=0x0050a464) Line 5284 + 0x21 bytes C++
> mozjs.dll!js_GetProperty(JSContext * cx=0x097deb58, JSObject * obj=0x191a62e0, JSObject * receiver=0x191a62e0, jsid id={...}, js::Value * vp=0x0050a464) Line 5300 + 0x1b bytes C++
> mozjs.dll!JSObject::getProperty(JSContext * cx=0x097deb58, JSObject * receiver=0x191a62e0, jsid id={...}, js::Value * vp=0x0050a464) Line 1183 + 0x2c bytes C++
> mozjs.dll!JSObject::getProperty(JSContext * cx=0x097deb58, jsid id={...}, js::Value * vp=0x0050a464) Line 1188 C++
> mozjs.dll!js::Interpret(JSContext * cx=0x097deb58, js::StackFrame * entryFrame=0x049f0028, js::InterpMode interpMode=JSINTERP_NORMAL) Line 3888 + 0x1d bytes C++
> mozjs.dll!js::RunScript(JSContext * cx=0x097deb58, JSScript * script=0x1da68b18, js::StackFrame * fp=0x049f0028) Line 613 + 0xf bytes C++
> mozjs.dll!js::Invoke(JSContext * cx=0x097deb58, const js::CallArgs & argsRef={...}, js::MaybeConstruct construct=NO_CONSTRUCT) Line 686 + 0x11 bytes C++
> mozjs.dll!js::Invoke(JSContext * cx=0x097deb58, js::InvokeArgsGuard & args={...}, js::MaybeConstruct construct=NO_CONSTRUCT) Line 169 + 0x1a bytes C++
> mozjs.dll!js::ExternalInvoke(JSContext * cx=0x097deb58, const js::Value & thisv={...}, const js::Value & fval={...}, unsigned int argc=1, js::Value * argv=0x0050b11c, js::Value * rval=0x0050b0dc) Line 805 + 0xf bytes C++
> mozjs.dll!JS_CallFunctionValue(JSContext * cx=0x097deb58, JSObject * obj=0x191a9040, jsval_layout fval={...}, unsigned int argc=1, jsval_layout * argv=0x0050b11c, jsval_layout * rval=0x0050b0dc) Line 5082 + 0x45 bytes C++
> xul.dll!nsXPCWrappedJSClass::CallMethod(nsXPCWrappedJS * wrapper=0x19dcc888, unsigned short methodIndex=3, const XPTMethodDescriptor * info=0x037fcaf0, nsXPTCMiniVariant * nativeParams=0x0050b200) Line 1657 + 0x38 bytes C++
> xul.dll!nsXPCWrappedJS::CallMethod(unsigned short methodIndex=3, const XPTMethodDescriptor * info=0x037fcaf0, nsXPTCMiniVariant * params=0x0050b200) Line 586 C++
> xul.dll!PrepareAndDispatch(nsXPTCStubBase * self=0x1de78060, unsigned int methodIndex=3, unsigned int * args=0x0050b2c0, unsigned int * stackBytesToPop=0x0050b2b0) Line 114 + 0x21 bytes C++
> xul.dll!SharedStub() Line 142 C++
> xul.dll!nsEventListenerManager::HandleEventSubType(nsListenerStruct * aListenerStruct=0x09d06270, nsIDOMEventListener * aListener=0x1de78060, nsIDOMEvent * aDOMEvent=0x1dc5b310, nsIDOMEventTarget * aCurrentTarget=0x196c7884, unsigned int aPhaseFlags=2, nsCxPusher * aPusher=0x0050b630) Line 1075 + 0x12 bytes C++
> xul.dll!nsEventListenerManager::HandleEventInternal(nsPresContext * aPresContext=0x196316f8, nsEvent * aEvent=0x0050bc6c, nsIDOMEvent * * aDOMEvent=0x0050b620, nsIDOMEventTarget * aCurrentTarget=0x196c7884, unsigned int aFlags=2, nsEventStatus * aEventStatus=0x0050b624, nsCxPusher * aPusher=0x0050b630) Line 1174 + 0x27 bytes C++
> xul.dll!nsEventListenerManager::HandleEvent(nsPresContext * aPresContext=0x196316f8, nsEvent * aEvent=0x0050bc6c, nsIDOMEvent * * aDOMEvent=0x0050b620, nsIDOMEventTarget * aCurrentTarget=0x196c7884, unsigned int aFlags=2, nsEventStatus * aEventStatus=0x0050b624, nsCxPusher * aPusher=0x0050b630) Line 153 C++
> xul.dll!nsEventTargetChainItem::HandleEvent(nsEventChainPostVisitor & aVisitor={...}, unsigned int aFlags=2, int aMayHaveNewListenerManagers=0, nsCxPusher * aPusher=0x0050b630) Line 216 C++
> xul.dll!nsEventTargetChainItem::HandleEventTargetChain(nsEventChainPostVisitor & aVisitor={...}, unsigned int aFlags=6, nsDispatchingCallback * aCallback=0x0050b734, int aMayHaveNewListenerManagers=0, nsCxPusher * aPusher=0x0050b630) Line 369 C++
> xul.dll!nsEventDispatcher::Dispatch(nsISupports * aTarget=0x125bce98, nsPresContext * aPresContext=0x196316f8, nsEvent * aEvent=0x0050bc6c, nsIDOMEvent * aDOMEvent=0x00000000, nsEventStatus * aEventStatus=0x0050b964, nsDispatchingCallback * aCallback=0x0050b734, nsCOMArray<nsIDOMEventTarget> * aTargets=0x00000000) Line 672 + 0x21 bytes C++
> xul.dll!PresShell::HandleEventInternal(nsEvent * aEvent=0x0050bc6c, nsIView * aView=0x1cfae398, nsEventStatus * aStatus=0x0050b964) Line 7081 + 0x2b bytes C++
> xul.dll!PresShell::HandlePositionedEvent(nsIView * aView=0x1cfae398, nsIFrame * aTargetFrame=0x1d60e780, nsGUIEvent * aEvent=0x0050bc6c, nsEventStatus * aEventStatus=0x0050b964) Line 6914 + 0x14 bytes C++
> xul.dll!PresShell::HandleEvent(nsIView * aView=0x05a88768, nsGUIEvent * aEvent=0x0050bc6c, int aDontRetargetEvents=0, nsEventStatus * aEventStatus=0x0050b964) Line 6746 + 0x1b bytes C++
> xul.dll!nsViewManager::HandleEvent(nsView * aView=0x05a88768, nsGUIEvent * aEvent=0x0050bc6c) Line 1032 C++
> xul.dll!nsViewManager::DispatchEvent(nsGUIEvent * aEvent=0x0050bc6c, nsIView * aView=0x05a88768, nsEventStatus * aStatus=0x0050ba68) Line 1007 + 0x13 bytes C++
> xul.dll!AttachedHandleEvent(nsGUIEvent * aEvent=0x0050bc6c) Line 192 C++
> xul.dll!nsWindow::DispatchEvent(nsGUIEvent * event=0x0050bc6c, nsEventStatus & aStatus=nsEventStatus_eIgnore) Line 3555 + 0xc bytes C++
> xul.dll!nsWindow::DispatchWindowEvent(nsGUIEvent * event=0x0050bc6c) Line 3582 C++
> xul.dll!nsWindow::OnMouseWheelInternal(unsigned int aMessage=522, unsigned int aWParam=4293984256, long aLParam=52692613, long * aRetValue=0x0050ca28) Line 6555 C++
> xul.dll!nsWindow::ProcessMessage(unsigned int msg=33552, unsigned int & wParam=4293984256, long & lParam=52692613, long * aRetValue=0x0050ca28) Line 5308 C++
>> xul.dll!nsWindow::OnMouseWheel(unsigned int aMsg=522, unsigned int aWParam=4293984256, long aLParam=52692613, long * aRetValue=0x0050ca28) Line 7726 C++
> xul.dll!nsWindow::ProcessMessage(unsigned int msg=522, unsigned int & wParam=4293984256, long & lParam=52692613, long * aRetValue=0x0050ca28) Line 5294 C++
> xul.dll!nsWindow::WindowProcInternal(HWND__ * hWnd=0x000d1cd6, unsigned int msg=522, unsigned int wParam=4293984256, long lParam=52692613) Line 4407 + 0x20 bytes C++
> xul.dll!CallWindowProcCrashProtected(long (HWND__ *, unsigned int, unsigned int, long)* wndProc=0x55901e70, HWND__ * hWnd=0x000d1cd6, unsigned int msg=522, unsigned int wParam=4293984256, long lParam=52692613) Line 65 + 0x13 bytes C++
> xul.dll!nsWindow::WindowProc(HWND__ * hWnd=0x000d1cd6, unsigned int msg=522, unsigned int wParam=4293984256, long lParam=52692613) Line 4349 + 0x1a bytes C++
> user32.dll!_InternalCallWinProc@20() + 0x23 bytes
> user32.dll!_UserCallWinProcCheckWow@32() + 0xb7 bytes
> user32.dll!_CallWindowProcAorW@24() + 0x5e bytes
> user32.dll!_CallWindowProcW@20() + 0x1b bytes
> xul.dll!mozilla::plugins::PluginInstanceParent::PluginWindowHookProc(HWND__ * hWnd=0x000d1cd6, unsigned int message=522, unsigned int wParam=4293984256, long lParam=52692613) Line 1650 C++
> user32.dll!_InternalCallWinProc@20() + 0x23 bytes
> user32.dll!_UserCallWinProcCheckWow@32() + 0xb7 bytes
> user32.dll!_CallWindowProcAorW@24() + 0x5e bytes
> user32.dll!_CallWindowProcW@20() + 0x1b bytes
> xul.dll!PluginWndProcInternal(HWND__ * hWnd=0x000d1cd6, unsigned int msg=522, unsigned int wParam=4293984256, long lParam=52692613) Line 355 + 0x34 bytes C++
> xul.dll!CallWindowProcCrashProtected(long (HWND__ *, unsigned int, unsigned int, long)* wndProc=0x557d31d0, HWND__ * hWnd=0x000d1cd6, unsigned int msg=522, unsigned int wParam=4293984256, long lParam=52692613) Line 65 + 0x13 bytes C++
> xul.dll!PluginWndProc(HWND__ * hWnd=0x000d1cd6, unsigned int msg=522, unsigned int wParam=4293984256, long lParam=52692613) Line 384 + 0x1a bytes C++
> user32.dll!_InternalCallWinProc@20() + 0x23 bytes
> user32.dll!_UserCallWinProcCheckWow@32() + 0xb7 bytes
> user32.dll!_DispatchClientMessage@24() + 0x51 bytes
> user32.dll!___fnDWORD@4() + 0x2b bytes
> ntdll.dll!_KiUserCallbackDispatcher@12() + 0x2e bytes
> user32.dll!_NtUserPeekMessage@20() + 0x15 bytes
> user32.dll!__PeekMessage@24() + 0x2d bytes
> user32.dll!_PeekMessageW@20() + 0x197 bytes
> xul.dll!PeekUIMessage(tagMSG * aMsg=0x0050d06c) Line 83 + 0x18 bytes C++
> xul.dll!nsAppShell::ProcessNextNativeEvent(int mayWait=1) Line 331 + 0x9 bytes C++
> xul.dll!nsBaseAppShell::DoProcessNextNativeEvent(int mayWait=1) Line 171 + 0x11 bytes C++
> xul.dll!nsBaseAppShell::OnProcessNextEvent(nsIThreadInternal * thr=0x009da018, int mayWait=1, unsigned int recursionDepth=0) Line 324 + 0xf bytes C++
> xul.dll!nsThread::ProcessNextEvent(int mayWait=1, int * result=0x0050d15c) Line 598 C++
> xul.dll!NS_ProcessNextEvent_P(nsIThread * thread=0x009da018, int mayWait=1) Line 245 + 0x16 bytes C++
> xul.dll!mozilla::ipc::MessagePump::Run(base::MessagePump::Delegate * aDelegate=0x009d8ad0) Line 134 + 0xe bytes C++
> xul.dll!MessageLoop::RunInternal() Line 222 C++
> xul.dll!MessageLoop::RunHandler() Line 206 C++
> xul.dll!MessageLoop::Run() Line 180 C++
> xul.dll!nsBaseAppShell::Run() Line 191 C++
> xul.dll!nsAppShell::Run() Line 256 + 0x9 bytes C++
> xul.dll!nsAppStartup::Run() Line 224 + 0x1c bytes C++
> xul.dll!XRE_main(int argc=4, char * * argv=0x00b0f018, const nsXREAppData * aAppData=0x009ca318) Line 3577 + 0x25 bytes C++
> firefox.exe!do_main(const char * exePath=0x0050facc, int argc=4, char * * argv=0x00b0f018) Line 198 + 0x12 bytes C++
> firefox.exe!NS_internal_main(int argc=4, char * * argv=0x00b0f018) Line 281 + 0x14 bytes C++
> firefox.exe!wmain(int argc=4, wchar_t * * argv=0x00b098e0) Line 107 + 0xd bytes C++
> firefox.exe!__tmainCRTStartup() Line 583 + 0x19 bytes C
> firefox.exe!wmainCRTStartup() Line 403 C
> kernel32.dll!7563339a()
> ntdll.dll!___RtlUserThreadStart@8() + 0x27 bytes
> ntdll.dll!__RtlUserThreadStart@8() + 0x1b bytes
| Assignee | ||
Comment 9•14 years ago
|
||
Ah, I see. I didn't assume this case -- the web page listens mouse wheel event and accesses to plugin.
| Assignee | ||
Updated•14 years ago
|
Summary: Flash crashes if I scroll up/down in flash panorama → Plugin hangs when content's script accesses plugin at mouse wheel event which wasn't consumed by the plugin
| Assignee | ||
Updated•14 years ago
|
Assignee: nobody → masayuki
Status: NEW → ASSIGNED
| Assignee | ||
Comment 10•14 years ago
|
||
Attachment #550619 -
Flags: review?(jmathies)
Comment 11•14 years ago
|
||
Comment on attachment 550619 [details] [diff] [review]
Patch v1.0
Posting mouse scroll messages to these windows is acceptable practice?
| Assignee | ||
Comment 12•14 years ago
|
||
(In reply to comment #11)
> Posting mouse scroll messages to these windows is acceptable practice?
I think so but it may change order of messages. E.g.,
WM_MOUSEWHEEL
WM_KEYDOWN
WM_MOUSEWHEEL
are coming,
it could be
WM_KEYDOWN
MOZ_WM_MOUSEWHEEL
MOZ_WM_MOUSEWHEEL
If you worry about this, we should give priority for MOZ_WM_MOUSEWHEEL.
| Assignee | ||
Comment 13•14 years ago
|
||
This also changes message order. This is stricter than attachment 550619 [details] [diff] [review], but I'm not sure this is worth.
Attachment #550945 -
Flags: review?(jmathies)
Updated•14 years ago
|
Attachment #550619 -
Flags: review?(jmathies) → review+
Comment 14•14 years ago
|
||
Comment on attachment 550945 [details] [diff] [review]
Patch v1.0 alternative
This look like it could effect fx proper, I prefer the original patch.
Attachment #550945 -
Flags: review?(jmathies) → review-
| Assignee | ||
Comment 15•14 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla8
Updated•14 years ago
|
Crash Signature: [@ hang | NtUserMessageCall | ImeWndCreateHandler ]
Comment 16•14 years ago
|
||
(In reply to Masayuki Nakano (Mozilla Japan)(away 8/10 - 8/12) from comment #15)
> http://hg.mozilla.org/mozilla-central/rev/87e3ea12ed5d
Both of these hangs appear to have been fixed the same day this landed on mc.
Crash Signature: [@ hang | NtUserMessageCall | ImeWndCreateHandler ] → [@ hang | NtUserMessageCall | ImeWndCreateHandler ]
[@ hang | NtUserMessageCall | SendMessageW ]
Updated•14 years ago
|
Crash Signature: [@ hang | NtUserMessageCall | ImeWndCreateHandler ]
[@ hang | NtUserMessageCall | SendMessageW ] → [@ hang | NtUserMessageCall | ImeWndCreateHandler ]
[@ hang | NtUserMessageCall | SendMessageW ]
[@ hang | NtUserMessageCall | GetWindowLongPtrA ]
Comment 17•13 years ago
|
||
bp-f6684915-4ef3-42d5-9e22-1e4342120118
Got this bug yesterday on Trunk 12.0a1 64Bit Build 17 Jan.
Mozilla/5.0 (Windows NT 6.1; Win64; x64; rv:12.0a1) Gecko/20120117 Firefox/12.0a1
With Flash player Version 11,2,202,160.
Btw, At the same time I got another crash signature (In the about:crashes):
bp-7105cdb5-66a2-48ef-913a-dc4092120118
Any ideas?
| Assignee | ||
Comment 18•13 years ago
|
||
Mikel:
Looks like they're really caused by other bugs. Why did you think they're this bug? Did you reproduce them when you turned mouse wheel on a plugin?
Comment 19•13 years ago
|
||
Well actually I don't really remember what I was doing at that moment, but I am pretty sure It crashed while I was on YouTube trying to "move" things up.
What made me think that these two are related is that one of them is this particular bug which is marked as resolved and the second one, which isn't resolved yet, was in the crash list at the same time as this one (AKA same hour of submission) when I was looking seconds after it crashed so I guess the unresolved bug triggered in some way this bug.
I haven't had any bugs previously in the list so I am pretty sure they are related in some way.
I haven't stumbled upon this bug since that time, therefore I cant reproduce it.
Updated•3 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•