Bug 676361 Plugin hangs when content's script accesses plugin at mouse wheel event which wasn't consumed by the plugin r=jimm